[package]
name = "onetree"
version = "0.1.0"
authors = ["Amedee d'Aboville <amedee.daboville@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsplib = { path = "../tsp" }
noisy_float = "0.1.10"

[dev-dependencies]
pretty_assertions = "0.6.1"
